--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,8 +1,18 @@
-<h2>{{ hero.name | uppercase }}</h2>
+<!-- <h2>{{ hero.name | uppercase }}</h2>
 
 <div><span>id: </span>{{ hero.id }}</div>
 <div><span>name: </span>{{ hero.name }}</div>
 <div>
   <label for="name">Hero name: </label>
   <input id="name" [(ngModel)]="hero.name" placeholder="name" />
-</div>
+</div> -->
+<h2>
+  <ul>
+    <li>
+      <button type="button">
+        <span class="badge"></span>
+        <span class="name"></span>
+      </button>
+    </li>
+  </ul>
+</h2>
