--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -9,7 +9,7 @@
 <h2>Tour of heroes</h2>
 <ul class="heroes">
   <li *ngFor="let hero of heroes">
-    <button type="button">
+    <button class="button">
       <span class="badge"> {{ hero.id }} </span>
       <span class="name">{{ hero.name }}</span>
     </button>
