--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -8,8 +8,8 @@
 </div> -->
 <h2>Tour of heroes</h2>
 <ul class="heroes">
-  <li *ngFor="let hero of heroes">
-    <button class="button">
+  <li>
+    <button type="button">
       <span class="badge"> {{ hero.id }} </span>
       <span class="name">{{ hero.name }}</span>
     </button>
