--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <h1>{{ title }}</h1>
-<app-heroes *ngFor="let hero of HERO"></app-heroes>
+<app-heroes *ngFor="let hero of heroes"></app-heroes>
+<h2>Tour of heroes</h2>
