--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -8,8 +8,8 @@
 </div> -->
 
 <ul class="heroes">
-  <li *ngIf="getEven()">
-    <button type="button">
+  <li *ngFor="let hero of heroes">
+    <button type="button" (click)="onSelect(hero)">
       <span class="badge"> {{ hero.id }} </span>
       <span class="name">{{ hero.name }}</span>
     </button>
