--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <h1>{{ title }}</h1>
+<h2>my heroes</h2>
 <app-heroes *ngFor="let hero of heroes" [hero]="hero"></app-heroes>
-<h2>Tour of heroes</h2>
