--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,6 @@
 <h2>my heroes</h2>
 <app-heroes></app-heroes>
 <app-hero-details></app-hero-details>
+<div class="container">
+  <div class="hero-details"></div>
+</div>
