--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -8,7 +8,7 @@
 </div> -->
 
 <ul class="heroes">
-  <li>
+  <li *ngIf="hero.id % 2 != 0">
     <button type="button">
       <span class="badge"> {{ hero.id }} </span>
       <span class="name">{{ hero.name }}</span>
