--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -15,15 +15,11 @@
     </button>
   </li>
 </ul>
-<div *ngif="selectedHero">
-  <h2>{{ selectedHero.name | uppercase }}Details</h2>
-  <div id:{{selectedHero.id}}></div>
+<div *ngIf="selectedHero">
+  <h2>{{ selectedHero.name | uppercase }} Details</h2>
+  <div>id: {{ selectedHero.id }}</div>
   <div>
-    <label for="hero-name">hero name:</label>
-    <label
-      id="hero-name"
-      [(ngModel)]="selectedHero.name"
-      placeholder="name"
-    ></label>
+    <label for="hero-name">Hero name: </label>
+    <input id="hero-name" [(ngModel)]="selectedHero.name" placeholder="name" />
   </div>
 </div>
