--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <h1>{{ title }}</h1>
 <h2>my heroes</h2>
-<app-heroes ></app-heroes>
+<app-heroes></app-heroes>
+<app-hero-details></app-hero-details>
